# python-pylayout

./: .gitignore  PUBLIC.txt  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py  upload.sh
src/pylayout/: __init__.py  _lang_layouts.py  pylayout.py
tests/: test.py
